# quicker-rpc

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  QuickerRpc.slnx  README.md  buf.yaml  build.ps1  build.yaml  chromecontrol-schema.json  dev.ps1  package.json  qkref.props  start-agent-gui.ps1  version.json
.cursor-plugin/: marketplace.json
QuickerRpc.AgentModel/: QuickerRpc.AgentModel.csproj  README.md
QuickerRpc.Console/: ActionQueryFilter.cs  ActionTraceCli.cs  AgentApiCliMapper.cs  AgentApiListJson.cs  AgentApiMentionSearchJson.cs  HeadlessCliResponses.cs  Program.ActionRuntime.cs  Program.ActionSharedInfo.cs  Program.Agent.cs  Program.Code.cs  Program.Fa.cs  Program.Form.cs  Program.Headless.cs  Program.Launcher.cs  Program.Mcp.cs  Program.Process.cs  Program.Profile.cs  Program.Project.cs  Program.Serve.cs  Program.Settings.cs  Program.SubProgram.cs  Program.Trigger.cs  Program.cs  QkrpcCliHelp.cs  QkrpcJson.cs  QkrpcPatchPreprocess.cs  QuickerRpc.Console.csproj  QuickerRpcConnect.cs
QuickerRpc.Console.Test/: ActionRuntimeMockTests.cs  ActionRuntimeQuickerRuntimeWireTests.cs  ActionRuntimeStandaloneTests.cs  ActionRuntimeStepCompileTests.cs  QkrpcAgentInstallSelectionTests.cs  QkrpcAgentSetupVerificationTests.cs  QkrpcMcpWorkspaceResolverTests.cs  QuickerRpc.Console.Test.csproj
QuickerRpc.Contracts/: QuickerRpc.Contracts.csproj
QuickerRpc.Host.Abstractions/: IQuickerRpcActionProgramHost.cs  IQuickerRpcActionRunHost.cs  IQuickerRpcActionSharingHost.cs  IQuickerRpcCallScheduler.cs  IQuickerRpcChromeControlHost.cs  IQuickerRpcExpressionHost.cs  IQuickerRpcHost.cs  IQuickerRpcLauncherHost.cs  IQuickerRpcSessionHost.cs  IQuickerRpcSettingsHost.cs  IQuickerRpcSubProgramHost.cs  IQuickerRpcTriggerHost.cs  QuickerRpc.Host.Abstractions.csproj  QuickerRpcHostMutationResult.cs
QuickerRpc.Plugin.Test/: ActionDocFormParserTests.cs  ActionProgramContentTests.cs  ActionProjectCatalogTests.cs  ActionProjectExtractWriterTests.cs  ActionProjectRoundTripTests.cs  ActionPublishIntroTests.cs  ActionPublishReadinessTests.cs  ActionSearchFuzzyMatchTests.cs  ActionSearchQuerySpecTests.cs  ActionSearchQueryTests.cs  ActionTracePipelineTests.cs  App.config  (+61 more)
agent-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
agent-gui/src-tauri/capabilities/: default.json  desktop.json
agent-gui/src-tauri/clipboard-history-metadata/: clipboard-history-manifest.json
agent-gui/src-tauri/icons/: icon.icns
agent-gui/src-tauri/permissions/: app-commands.toml
agent-gui/src-tauri/placeholder/: index.html
agent-gui/src-tauri/resources/: plugin-registry-bootstrap.json  voice-plugin-channel.json
agent-gui/src-tauri/src/: clipboard_history_plugin.rs  embedded_browser.rs  global_shortcut.rs  launcher.rs  legacy_chat_restore.rs  lib.rs  main.rs  quicker_agent_paths.rs  quicker_agent_updater.rs  shell_reveal.rs  single_instance.rs  tray.rs  voice_ipc.rs  voice_plugin.rs  voice_plugin_install.rs  webview_permissions.rs  webview_profile.rs  win_job.rs
agent-gui/src-tauri/src/plugin_runtime/: activation.rs  bootstrap.rs  cache.rs  channel.rs  commands.rs  compat.rs  host_version.rs  http.rs  mod.rs  registry.rs  types.rs
agent-gui/src-tauri/voice-plugin-metadata/: voice-plugin-channel.json  voice-sensevoice-model-identity.json
agent-gui/src-tauri/windows/: installer-hooks.nsh  installer.nsi  kill-bundled-node.vbs
browser-runtime/: .gitignore  README.md  pyproject.toml
browser-runtime/scripts/: test_panel_ws.py
browser-runtime/src/quicker_browser_runtime/: __init__.py  __main__.py  config.py  panel_stream.py  paths.py  protocol.py  server.py  session_manager.py  snapshot.py
browser-runtime/tests/: test_protocol.py
clipboard-history-runtime/: Cargo.toml
clipboard-history-runtime/src/: api.rs  clipboard.rs  main.rs  model.rs  store.rs
(+4006 files in other folders)
