[project]
name = "quicker-browser-runtime"
version = "0.1.0"
description = "Playwright browser automation server for QuickerAgent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QuickerAgent contributors" }]
dependencies = [
    "aiohttp>=3.10.0",
    "playwright>=1.49.0",
]

[project.scripts]
quicker-browser-runtime = "quicker_browser_runtime.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quicker_browser_runtime"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
