[package]
name = "quicker-agent"
version = "0.1.0"
description = "QuickerAgent — chat UI for QuickerRpc"
edition = "2021"

[lib]
name = "quicker_agent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
